# Python_web_hw_09

./: README.md  authors.json  main.py  pyproject.toml  quotes.json
